Update Interactive floor map
The roods betwwen rooms are not appear properly in light mode

--- a/map.html
+++ b/map.html
@@ -135,18 +135,18 @@
                     </g>
                     
                     <!-- Corridors -->
-                    <rect x="200" y="90" width="50" height="20" fill="var(--glass-bg)" stroke="var(--glass-border)"/>
-                    <rect x="370" y="90" width="60" height="20" fill="var(--glass-bg)" stroke="var(--glass-border)"/>
-                    <rect x="200" y="240" width="50" height="40" fill="var(--glass-bg)" stroke="var(--glass-border)"/>
-                    <rect x="370" y="240" width="60" height="40" fill="var(--glass-bg)" stroke="var(--glass-border)"/>
-                    <rect x="125" y="150" width="50" height="50" fill="var(--glass-bg)" stroke="var(--glass-border)"/>
-                    <rect x="310" y="150" width="50" height="50" fill="var(--glass-bg)" stroke="var(--glass-border)"/>
-                    <rect x="500" y="150" width="50" height="50" fill="var(--glass-bg)" stroke="var(--glass-border)"/>
-                    <rect x="690" y="150" width="50" height="50" fill="var(--glass-bg)" stroke="var(--glass-border)"/>
-                    <rect x="125" y="320" width="50" height="60" fill="var(--glass-bg)" stroke="var(--glass-border)"/>
-                    <rect x="310" y="320" width="50" height="60" fill="var(--glass-bg)" stroke="var(--glass-border)"/>
-                    <rect x="500" y="320" width="50" height="60" fill="var(--glass-bg)" stroke="var(--glass-border)"/>
-                    <rect x="690" y="320" width="50" height="60" fill="var(--glass-bg)" stroke="var(--glass-border)"/>
+                    <rect x="200" y="90" width="50" height="20" fill="var(--corridor-fill)" stroke="var(--corridor-stroke)"/>
+                    <rect x="370" y="90" width="60" height="20" fill="var(--corridor-fill)" stroke="var(--corridor-stroke)"/>
+                    <rect x="200" y="240" width="50" height="40" fill="var(--corridor-fill)" stroke="var(--corridor-stroke)"/>
+                    <rect x="370" y="240" width="60" height="40" fill="var(--corridor-fill)" stroke="var(--corridor-stroke)"/>
+                    <rect x="125" y="150" width="50" height="50" fill="var(--corridor-fill)" stroke="var(--corridor-stroke)"/>
+                    <rect x="310" y="150" width="50" height="50" fill="var(--corridor-fill)" stroke="var(--corridor-stroke)"/>
+                    <rect x="500" y="150" width="50" height="50" fill="var(--corridor-fill)" stroke="var(--corridor-stroke)"/>
+                    <rect x="690" y="150" width="50" height="50" fill="var(--corridor-fill)" stroke="var(--corridor-stroke)"/>
+                    <rect x="125" y="320" width="50" height="60" fill="var(--corridor-fill)" stroke="var(--corridor-stroke)"/>
+                    <rect x="310" y="320" width="50" height="60" fill="var(--corridor-fill)" stroke="var(--corridor-stroke)"/>
+                    <rect x="500" y="320" width="50" height="60" fill="var(--corridor-fill)" stroke="var(--corridor-stroke)"/>
+                    <rect x="690" y="320" width="50" height="60" fill="var(--corridor-fill)" stroke="var(--corridor-stroke)"/>
                 </svg>
                 
                 <!-- Room Information Panel -->
